--- a/app/src/main/res/layout/content_record_fuel.xml
+++ b/app/src/main/res/layout/content_record_fuel.xml
@@ -116,7 +116,7 @@
         android:id="@+id/buttonSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
+        android:layout_gravity="end"
         android:text="@string/btn_Save"/>
 
 </LinearLayout>
