--- a/app/src/main/res/layout/content_record_fuel.xml
+++ b/app/src/main/res/layout/content_record_fuel.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dip"
-        android:text="Vehicle"
+        android:text="@string/lbl_vehicle"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         android:textStyle="bold"/>
 
@@ -66,7 +66,7 @@
             android:id="@+id/tilCost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dip"
+            android:layout_marginStart="40dip"
             android:orientation="vertical">
 
 
@@ -109,6 +109,15 @@
 
 
         </android.support.design.widget.TextInputLayout>
+
+        <TextView
+            android:text="@string/lbl_costPerVolume"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/lbl_costPerUnit"
+            android:layout_weight="1"
+            android:textSize="18sp"
+            android:layout_gravity="center_vertical"/>
 
     </LinearLayout>
 
